src/test/resources/semantic/accept/literalAssignment.ul
void main() {
}

int foo(int foo) {
    float bar;

    foo = 5;
    bar = 5.0;
}
