src/test/resources/semantic/reject/duplicateParamDifferentTypes.ul
void main() {
}

void foo(float param, int param) {
}
